_includes/manuals/1.8/4.3.2_smartproxy_settings.md
The main configuration for the core Smart Proxy is held in the */etc/foreman-proxy/settings.yml* or *config/settings.yml* file.  This includes configuration of ports to listen on, SSL and security settings and logging options.

Each of the modules used in the Smart Proxy have their configuration in the */etc/foreman-proxy/settings.d/* or *config/settings.d* directory.  Modules are enabled or disabled inside their respective configuration files with the `:enabled` directive, which determines whether the module is available on HTTP, HTTPS, both or is disabled (see below for more details).

#### YAML start

The first non-comment line of all configuration files must be three dashes.

<pre>---</pre>

#### Daemon configuration (settings.yml)

If daemon is present and true then the Smart Proxy will attempt to disconnect itself from the controlling terminal and daemonize itself on startup, writing its pid (process ID) into the specified file.

<pre>
:daemon: true
:daemon_pid: /var/run/foreman-proxy/foreman-proxy.pid
</pre>

#### Logging (settings.yml)

The proxy's output is captured to the the **log_file** and may be filtered via the usual Unix syslog levels:

* *WARN*
* *DEBUG*
* *ERROR*
* *FATAL*
* *INFO*
* *UNKNOWN*

See Ruby's [Logger class](http://www.ruby-doc.org/stdlib/libdoc/logger/rdoc/classes/Logger.html) for details.

<pre>
:log_file: /var/log/foreman-proxy/proxy.log
:log_level: DEBUG
</pre>

The log_file setting may be set to "STDOUT" which causes log messages to be logged to standard output, for capture by the running process (e.g. systemd with journal).

#### Listening configuration (settings.yaml)

By default the Smart Proxy listens on all interfaces, which can be changed to limit access to a network:

<pre>
# host to bind ports to (possible values: *, localhost, 0.0.0.0)
:bind_host: '*'
:bind_host: private.example.com
:bind_host: 192.168.1.10
</pre>

The Smart Proxy has a number of different modules which can be enabled either for HTTP, for HTTPS or for access on both services.  It is highly recommended to enable most only on HTTPS and only enable modules on HTTP when required (e.g. templates) or if no SSL is desired.

The two port options control which TCP port(s) the Smart Proxy will listen on.  At least one must be enabled for the proxy to start.  It is recommended to only set https_port unless an HTTP-only module is active, which also requires the three ssl_* settings to be set.

<pre>
:http_port: 8000
:https_port: 8443
</pre>

<div class="alert alert-info">Be careful when enabling http_port, ensure settings.d/ files are enabled only on HTTPS or trusted_hosts is set appropriately so modules are not exposed without security on HTTP.</div>

Modules are enabled in their per-module configuration file in */etc/foreman-proxy/settings.d/* with the `:enabled` directive, which can be set to:

* `:enabled: false` to disable the module entirely
* `:enabled: http` to listen on HTTP only
* `:enabled: https` to listen on HTTPS only (recommended)
* `:enabled: true` to listen on both HTTP and HTTPS if enabled (not recommended)

#### Security configuration (settings.yml)

The existence of all the three ssl key entries below requires the use of an SSL connection.

**NOTE** that both client certificates need to be signed by the same CA, which must be in the *ssl_ca_file*, in order for this to work
see [**SSL**](manuals/{{page.version}}/index.html#4.3.6SSL) for more information

<pre>
:ssl_certificate: ssl/certs/fqdn.pem
:ssl_ca_file: ssl/certs/ca.pem
:ssl_private_key: ssl/private_keys/fqdn.key
</pre>

This is the list of hosts from which the smart proxy will accept connections.  For HTTPS connections, the name must match the common name (CN) within the subject DN and for HTTP connections, it must match the hostname from reverse DNS.

<pre>
:trusted_hosts:
  - foreman.prod.domain
  - foreman.dev.domain
</pre>

For HTTPS connections, the name must match the common name (CN) within the subject DN and for HTTP connections, it must match the hostname from reverse DNS.  When `:forward_verify` is enabled (default: true) then the reverse lookup is verified against the forward lookup of the hostname (aka forward-confirmed reverse DNS/FCrDNS).

Some modules may allow connections from all hosts rather than only the trusted_hosts list, particularly if they intend to deal with requests directly from managed hosts rather than only from Foreman.

An empty trusted_hosts list will permit no hosts access:

    :trusted_hosts: []

While if the setting is not specified, any host may make requests to the smart proxy, which permits management of any enabled modules and features.

#### Foreman communication (settings.yml)

Some modules make requests *back* to Foreman, e.g. when relaying requests from client hosts.  The following setting changes the destination URL:

    :foreman_url: https://foreman.example.com

And the following settings change the SSL certificates used to authenticate to Foreman and to verify its certificate.  In a typical installation, Foreman and the Smart Proxy may both use certificates signed the same certificate authority, so these default to the values of the ssl_* settings defined above.

    # SSL settings for client authentication against Foreman. If undefined, the values
    # from general SSL options are used instead. Mainly useful when Foreman uses
    # different certificates for its web UI and for smart-proxy requests.
    :foreman_ssl_ca: /etc/foreman-proxy/ssl/certs/ca.pem
    :foreman_ssl_cert: /etc/foreman-proxy/ssl/certs/fqdn.pem
    :foreman_ssl_key: /etc/foreman-proxy/ssl/private_keys/fqdn.pem

